Better test coverage, wild cell reference cases covered

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,8 +1,7 @@
 rules = [
   ExplicitResultTypes
   LeakingImplicitClassVal
-  RemoveUnusedImports
-  RemoveUnusedTerms
+  RemoveUnused
 ]
 
 ExplicitResultTypes {
